--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello git</h1>  
+    <h1>hello git</h1>
+    <!-- Добавилась кнопка изминения  -->
 </body>
 <script src="script.js"></script>
 </html>
