--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>hello git</h1>
     <!-- Добавилась кнопка изминения  -->
     <!--Кнопка удаления  -->
+    <button>ТЕСТ</button>
 </body>
 <script src="script.js"></script>
 </html>
