--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!--Кнопка удаления  -->
     <p>:ЖОПА</p>
     <button>ТЕСТ</button>
+    <a href="#" class="href">Сыыль</a>
 </body>
 <script src="script.js"></script>
 </html>
