--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p>:ЖОПА</p>
     <button>ТЕСТ</button>
     <a href="#" class="href">Ссыль</a>
+    <a href="#" class="href">Другой ссыль</a>
 </body>
 <script src="script.js"></script>
 </html>
