--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIT-TEST</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <h1>hello git</h1>
@@ -16,5 +16,5 @@
     <a href="#" class="href">Ссыль</a>
     <a href="#" class="href">Другой ссыль</a>
 </body>
-<script src="script.js"></script>
+<script src="script/script.js"></script>
 </html>
